[gd_scene load_steps=3 format=3 uid="uid://yfpfno276rol"]

[ext_resource type="Theme" uid="uid://coxcra1002kil" path="res://scenes/ui_elements/shared_components/theme.tres" id="1_ah0mj"]
[ext_resource type="Script" uid="uid://b681aqqkiwo3k" path="res://scenes/game_elements/props/fixed_size_label/components/fixed_size_label.gd" id="1_k3ae5"]

[node name="FixedSizeLabel" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_k3ae5")
label_text = "Talk"

[node name="LabelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
texture_filter = 2
custom_minimum_size = Vector2(68, 46)
layout_mode = 0
offset_left = -34.0
offset_top = -23.0
offset_right = 34.0
offset_bottom = 23.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_ah0mj")
theme_type_variation = &"FixedSizeLabelContainer"

[node name="MarginContainer" type="MarginContainer" parent="LabelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="LabelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"FixedSizeLabel"
text = "Talk"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="resized" from="LabelContainer/MarginContainer/Label" to="." method="_on_label_resized"]
